fix: unify settings store
